# openapi.yaml
@@ -158,7 +158,7 @@ paths:
           $ref: '#/components/responses/Comparison'
         400:
           description: Invalid input
-  /extract-frames:
+  /frames:
     post:
       tags:
         - NLPService
@@ -192,7 +192,7 @@ paths:
           $ref: '#/components/responses/FramesExtraction'
         400:
           description: Invalid input
-  /extract-frames/{domainId}:
+  /frames/{domainId}:
     post:
       tags:
         - NLPService
